Bug 403775 - Impossible to reset cursor size to "Resolution dependent"
Summary: Impossible to reset cursor size to "Resolution dependent"
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_cursortheme (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-30 18:42 UTC by Patrick Silva
Modified: 2019-02-06 11:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-01-30 18:42:13 UTC
STEPS TO REPRODUCE
1. open system settings > Desktop theme > Cursors
2. set cursor size to 36, apply the new size and close system settings
3. reopen system settings > Desktop theme > Cursors
4. select "Resolution dependent" in "Size" dropdown

OBSERVED RESULT
it's impossible to apply the option selected because "Apply" button is disabled

EXPECTED RESULT
"Apply" button is enabled

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.54.0
Qt Version: 5.12.0
Comment 1 David Edmundson 2019-02-06 11:31:14 UTC
Git commit 3ae6a0eeb478ac6aa4e6792f06c92ad22c1169f6 by David Edmundson.
Committed on 06/02/2019 at 11:31.
Pushed by davidedmundson into branch 'Plasma/5.15'.

[kcms/cursortheme] Correctly load m_originalPreferredSize

Summary:
Otherwise setNeedsSave evaluates incorrectly.

Test Plan: Opened, set to "resolution dependent", could now apply

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18751

M  +1    -1    kcms/cursortheme/kcmcursortheme.cpp

https://commits.kde.org/plasma-desktop/3ae6a0eeb478ac6aa4e6792f06c92ad22c1169f6