[kcms/cursortheme] Correctly load m_originalPreferredSize

Summary:
Otherwise setNeedsSave evaluates incorrectly.

BUG: 403775

Test Plan: Opened, set to "resolution dependent", could now apply

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18751